fix publisher name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Artem Theme",
     "author": "Sujal Bolia <sujalbolia@gmail.com>",
     "description": "A beautifully warm dual theme for Visual Studio Code",
-    "publisher": "ariuspys",
+    "publisher": "Arius",
     "license": "MIT",
     "icon": "logo.png",
     "version": "0.0.1",
