fix marketplace theme

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "galleryBanner": {
         "color": "#F5FDFF",
-        "theme": "dark"
+        "theme": "light"
     },
     "categories": [
         "Themes"
